--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -4,5 +4,13 @@
 
   <label>Password</label>
   <input type="password" name="password" placeholder="Enter your Password"  >
-  <button>Sign In</button>
+ 
+
+  <button type='submit'>Log In</button>
+
+  
+  <a href="/signup">Signup</a>
+
+  <a href="/homepage">Log In</a>
+
 </form>
