--- a/views/auth/comment.hbs
+++ b/views/auth/comment.hbs
@@ -1,6 +1,6 @@
-<form method="POST" action="/login">
+<form method="POST" action="/profile">
   <label>Comment</label>
   <input type="comment" name="comment" placeholder="Post your comment!"  >
 
-  <button>Post</button>
+  <button type='submit'>Post</button>
 </form>
