link work homepage

--- a/views/auth/homepage.hbs
+++ b/views/auth/homepage.hbs
@@ -16,6 +16,12 @@
             <li id="to-left">
                <p><a href="/"> Home </a></p>
             </li>
+            <li>
+                <a href="/profile"> Profile </a>
+            </li>
+            <li>
+                <a href="/comment"> Comments </a>
+            </li>
             <li id="to-right">
                <a href="/signup">Signup</a> <span> | </span>
             </li>
