link page clean up

--- a/views/auth/homepage.hbs
+++ b/views/auth/homepage.hbs
@@ -14,7 +14,7 @@
       <nav>
          <ul>
             <li id="to-left">
-               <p><a href="/"> Home </a></p>
+               <a href="/"> Home </a>
             </li>
             <li>
                 <a href="/profile"> Profile </a>
@@ -23,10 +23,10 @@
                 <a href="/comment"> Comments </a>
             </li>
             <li id="to-right">
-               <a href="/signup">Signup</a> <span> | </span>
+               <a href="/signup">Signup</a> 
             </li>
             <li id="to-right">
-               <a href="/login">LogIn</a> <span> | </span>
+               <a href="/login">LogIn</a> 
             </li>
         
          </ul>
