--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,9 +11,34 @@
 
    <body>
 
+      <h1>Spgerrrrti</h1>
+
       {{{body}}}
 
       <script src="/js/script.js"></script>
    </body>
+
+   <body>
+
+      <nav>
+         <ul>
+            <li id="to-left">
+               <a href="/"> Home </a>
+            </li>
+            <li>
+                <a href="/profile"> Profile </a>
+            </li>
+            <li>
+                <a href="/comment"> Comments </a>
+            </li>
+            <li id="to-right">
+               <a href="/signup">Signup</a> 
+            </li>
+            <li id="to-right">
+               <a href="/login">LogIn</a> 
+            </li>
+        
+         </ul>
+      </nav> 
 
 </html>
