Post style & layout
post.hbs partial

--- a/views/partials/post.hbs
+++ b/views/partials/post.hbs
@@ -1,23 +1,34 @@
 <div class="post-holder">
     <div class="top-holder">
         <div class="content-holder">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint, voluptates.</p>
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint, voluptates.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, aut ex repudiandae ducimus quae
+                necessitatibus ipsam recusandae perferendis quo tenetur sapiente exercitationem voluptatum ratione,
+                architecto ea mollitia ullam ipsum nostrum!
+            </p>
         </div>
         <div class="vote-holder">
-            <img id="votes-uparrow" src="https://cdn3.iconfinder.com/data/icons/faticons/32/arrow-up-01-512.png" alt="">
+            <img id="votes-uparrow" class="vote-arrow"
+            src="https://cdn3.iconfinder.com/data/icons/faticons/32/arrow-up-01-512.png" alt="">
             <p id="votes-amount">0</p>
-            <img id="votes-downarrow" src="https://cdn3.iconfinder.com/data/icons/faticons/32/arrow-down-01-512.png" alt="">
+            <img id="votes-downarrow" class="vote-arrow"
+                src="https://cdn3.iconfinder.com/data/icons/faticons/32/arrow-down-01-512.png" alt="">
         </div>
     </div>
+    <div class="line-break"></div>
     <div class="bottom-holder">
-        <div>
-            <img src="https://cdn2.iconfinder.com/data/icons/pittogrammi/142/10-512.png" alt="Clock">
-            <p>0 min ago</p>
+        <div id="time-ago">
+            <img src="https://cdn2.iconfinder.com/data/icons/pittogrammi/142/10-512.png" alt="">
+            <p>2 min ago</p>
         </div>
-        <div>
+        <div id="comment-sect">
             <a href="#">
-                0 comments
+                Go to comments
             </a>
+            <p>
+                0 comments
+            </p>
         </div>
     </div>
 </div>
