--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -101,28 +101,106 @@ ul li {
 
 
 /* PARTIALS */
+.post-holder {
+  border-radius: 10px;
+  width: 500px;
+  padding: 0px;
+  box-shadow: 0px 0px 5px;
+}
 
+.post-holder p {
+  color: #646464;
+}
+
+/* Top Holder */
 .top-holder {
-
+  margin: 5px 10px;
+  display: flex;
 }
 .content-holder {
 
 }
+
+/* Votes */
 .vote-holder {
+  align-self: flex-end;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.vote-arrow {
+  height: 40px;
+}
+#votes-uparrow {
 
 }
-.votes-uparrow {
+#votes-amount {
+  font-size: 1.5em;
+  padding: 0;
+  margin: 0;
+  text-align: center;
+}
+#votes-downarrow {
 
 }
-.votes-amount {
 
+.vote-arrow:hover {
+  cursor: pointer;
+  transform: scale(1.1);
 }
-.votes-downarrow {
 
+.vote-arrow:active {
+  cursor: pointer;
+  transform: scale(1.3);
 }
+
+/* BOTTOM */
 .bottom-holder {
-
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  height: 30px;
 }
-.post-holder {
+.bottom-holder img{
+  height: 20px;
+}
 
+#time-ago {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  text-align: center;
+  width: 30%;
+}
+#time-ago * {
+  margin-left: 10px;
+}
+
+.line-break {
+  width: 100%;
+  height: 3px;
+  background-color: #8b8b8b;
+}
+
+#comment-sect {
+  width: 50%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  text-align: center;
+}
+#comment-sect a{
+  font-size: 1.1em;
+ }
+#comment-sect a:hover{
+ color: #f02b63;
+}
+
+#comment-sect p{
+  font-size: 1.2em;
+ }
+
+#comment-sect * {
+  margin-right: 10px;
 }
