--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -102,10 +102,11 @@ ul li {
 
 /* PARTIALS */
 .post-holder {
-  border-radius: 10px;
+  margin: 10px 10px;
+  border-radius: 5px;
   width: 500px;
   padding: 0px;
-  box-shadow: 0px 0px 5px;
+  box-shadow: 0px 0px 3px;
 }
 
 .post-holder p {
@@ -118,7 +119,7 @@ ul li {
   display: flex;
 }
 .content-holder {
-
+  width: 90%;
 }
 
 /* Votes */
@@ -139,6 +140,7 @@ ul li {
   font-size: 1.5em;
   padding: 0;
   margin: 0;
+  line-height: 0;
   text-align: center;
 }
 #votes-downarrow {
