Updated Post Schema

--- a/views/partials/post.hbs
+++ b/views/partials/post.hbs
@@ -9,7 +9,7 @@
             <img id="votes-uparrow" class="vote-arrow"
             src="https://cdn3.iconfinder.com/data/icons/faticons/32/arrow-up-01-512.png" alt="">
             <p id="votes-amount"> 
-                {{this.upvotes}} 
+                {{this.votes}} 
             </p>
             <img id="votes-downarrow" class="vote-arrow"
                 src="https://cdn3.iconfinder.com/data/icons/faticons/32/arrow-down-01-512.png" alt="">
