--- a/views/partials/post.hbs
+++ b/views/partials/post.hbs
@@ -1,4 +1,4 @@
-<div class="post-holder">
+<div class="post-holder" id="{{this._id}}">
     <div class="top-holder">
         <div class="content-holder">
             <p>
@@ -6,13 +6,15 @@
             </p>
         </div>
         <div class="vote-holder">
+            <div class="post-objectID" id="{{this._id}}"></div>
+            <div class="user-objectID" id="{{this.userid}}"></div>
             <img id="votes-uparrow" class="vote-arrow"
             src="https://cdn3.iconfinder.com/data/icons/faticons/32/arrow-up-01-512.png" alt="">
             <p id="votes-amount"> 
                 {{this.votes}} 
             </p>
             <img id="votes-downarrow" class="vote-arrow"
-                src="https://cdn3.iconfinder.com/data/icons/faticons/32/arrow-down-01-512.png" alt="">
+            src="https://cdn3.iconfinder.com/data/icons/faticons/32/arrow-down-01-512.png" alt="">
         </div>
     </div>
     <div class="line-break"></div>
