--- a/views/partials/post.hbs
+++ b/views/partials/post.hbs
@@ -9,12 +9,12 @@
             <div class="post-objectID" id="{{this._id}}"></div>
             <div class="user-objectID" id="{{this.userid}}"></div>
             <img id="votes-uparrow" class="vote-arrow"
-            src="https://cdn3.iconfinder.com/data/icons/faticons/32/arrow-up-01-512.png" alt="">
+            src="https://cdn3.iconfinder.com/data/icons/faticons/32/arrow-up-01-512.png">
             <p id="votes-amount"> 
                 {{this.votes}} 
             </p>
             <img id="votes-downarrow" class="vote-arrow"
-            src="https://cdn3.iconfinder.com/data/icons/faticons/32/arrow-down-01-512.png" alt="">
+            src="https://cdn3.iconfinder.com/data/icons/faticons/32/arrow-down-01-512.png">
         </div>
     </div>
     <div class="line-break"></div>
