fixed the log in session error

--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -7,4 +7,12 @@
  
   <button type='submit'>Log In</button>
   <a href="/signup">Signup</a>
+
+  {{#if error}}
+     <div>{{error}}</div>
+
+
+  {{/if}}
+
+ 
 </form>
