profile scroll addition

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -31,7 +31,7 @@
          </ul>
       </nav> 
 
-      <h1>Spgerrrrti</h1>
+      <h1>Kajio Logo will go here!</h1>
       {{{body}}}
 
       {{> comment}}
