--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,7 +9,10 @@
       <link rel="stylesheet" href="/stylesheets/style.css">
    </head>
 
+
+
    <body>
+       <img id="logo" src="images/logo-color.png">
       <nav>
          <ul>
             <li id="to-left">
@@ -31,7 +34,8 @@
          </ul>
       </nav> 
 
-      <h1>Kajio Logo will go here!</h1>
+     
+
       {{{body}}}
 
       {{> comment}}
