created comment section & routes

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -34,8 +34,6 @@
       <h1>Spgerrrrti</h1>
       {{{body}}}
 
-      {{> comment}}
-
-      <script src="/js/script.js"></script>
+      <script src="/js/script.js" height="300"></script>
    </body>
 </html>
