--- a/views/partials/comment.hbs
+++ b/views/partials/comment.hbs
@@ -1,3 +1,8 @@
-<h1>
-    Hello this is my comment partial
-</h1>
+<div class="comment-holder" id="{{this._id}}">
+    <div class="content-holder">
+        <p>
+            {{this.sentence}}
+        </p>
+    </div>
+    <div class="line-break"></div>
+</div>
