--- a/views/partials/post.hbs
+++ b/views/partials/post.hbs
@@ -38,7 +38,7 @@
             </p>
         </div>
         <div id="comment-sect">
-            <a href="#">
+            <a href="/comment/{{this._id}}">
                 Go to comments
             </a>
             <p>
