--- a/views/auth/comment.hbs
+++ b/views/auth/comment.hbs
@@ -1,6 +1,14 @@
+{{#each post}}
+  {{> post}}
+{{/each}}
+
 <form method="POST" action="/profile">
   <label>Comment</label>
   <input type="comment" name="comment" placeholder="Post your comment!"  >
-
+  
   <button type='submit'>Post</button>
 </form>
+
+{{#each comments}} 
+  {{> comment}}
+{{/each}}
