--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -12,10 +12,14 @@
 
 
    <body>
-       <img id="logo" src="images/logo-color.png">
-      <nav>
-         <ul>
-            <li id="to-left">
+     
+     <nav>
+          
+         <ul id='nav-bar-holder'>
+            <li>
+                <img id="logo" src="images/logo-color.png">
+            </li>
+            <li>
                <a href="/"> Home </a>
             </li>
             <li>
@@ -24,10 +28,10 @@
             <li>
                 <a href="/comment"> Comments </a>
             </li>
-            <li id="to-right">
+            <li>
                <a href="/signup">Signup</a> 
             </li>
-            <li id="to-right">
+            <li>
                <a href="/login">LogIn</a> 
             </li>
         
