--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -240,8 +240,18 @@ ul li {
 }
 
 #logo{
+  background-color: #f02b63;
+  height: 100%;
+  order: 1;
+}
 
-  position: absolute;
-  height: 10%;
-  
+#nav-bar-holder{
+justify-content: space-around;
+display: flex;
+width: 100%;
+height: 75px;
+order:2;
+flex-direction: row;
+
+
 }
