--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -232,16 +232,8 @@ ul li {
   margin-right: 10px;
 }
 
-.post-holder{
-
-  overflow-y: scroll;
-  height: 500px
-
-}
-
 #logo{
-
   position: absolute;
   height: 10%;
-  
+  flex-direction: row;
 }
