minor titles shifts

--- a/views/auth/profile.hbs
+++ b/views/auth/profile.hbs
@@ -1,4 +1,4 @@
-<h1>YOUR POSTS</h1><h1>INTERACTED WITH</h1>
+<h1>YOUR POSTS                          INTERACTED WITH</h1>
 <div class="post-holder">{{#each posts}}
     {{> post}}
 {{/each}}</div>
