Added infinite scroller in: /home

--- a/views/pages/main.hbs
+++ b/views/pages/main.hbs
@@ -1,6 +1,6 @@
 <h2>this is my main Page</h2>
 <div id="main-container">
     {{#each posts}}
-        {{> post}}
+        {{> post data=this}}
     {{/each}}
 </div>
