delete button added to profile page

--- a/views/auth/profile.hbs
+++ b/views/auth/profile.hbs
@@ -1,4 +1,4 @@
-<h1>YOUR POSTS                          INTERACTED WITH</h1>
+<h1>YOUR POSTS INTERACTED WITH</h1>
 <div class="post-holder">{{#each posts}}
     {{> post}}
 {{/each}}</div>
@@ -40,3 +40,5 @@
         </div>
     </div>
 </div>
+
+<button type='submit'>Delete</button>
