delete profile button added, no route

--- a/views/auth/profile.hbs
+++ b/views/auth/profile.hbs
@@ -40,5 +40,9 @@
         </div>
     </div>
 </div>
-
-<button type='submit'>Delete</button>
+<h3>Delete Profile</h3>
+<p>Are you sure you want to delete your profile?</p>
+<form>
+ <button type='submit'>Delete</button>
+  <a href="/signup"</a>
+</form>
