delete button route

--- a/views/auth/profile.hbs
+++ b/views/auth/profile.hbs
@@ -42,7 +42,9 @@
 </div>
 <h3>Delete Profile</h3>
 <p>Are you sure you want to delete your profile?</p>
-<form>
+<form method="GET" action="/signup"
+>
+
  <button type='submit'>Delete</button>
-  <a href="/signup"</a>
+  <a href="/signup"></a>
 </form>
