--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -43,8 +43,16 @@
          </div>
       </nav>
 
+      <div class="background-holder">
+        
+      </div>
+
       <div id="body-holder">
          {{{body}}}
+      </div>
+
+      <div class="frontground-holder">
+         
       </div>
 
       <script src="/js/script.js" height="300"></script>
