--- a/views/partials/post.hbs
+++ b/views/partials/post.hbs
@@ -10,10 +10,10 @@
             <div class="user-objectID" id="{{data.userid}}"></div>
             {{#if data.upvote}}
                 <img id="votes-uparrow" class="vote-arrow img-selected img-upvote"
-                src="https://cdn3.iconfinder.com/data/icons/faticons/32/arrow-up-01-512.png">
+                src="https://cdn-icons.flaticon.com/png/512/4103/premium/4103128.png?token=exp=1637631859~hmac=ffa7ac5371a0c7fd621b7b3e41c6f7ff">
                 {{else}}
                 <img id="votes-uparrow" class="vote-arrow"
-                src="https://cdn3.iconfinder.com/data/icons/faticons/32/arrow-up-01-512.png">
+                src="https://cdn-icons.flaticon.com/png/512/4103/premium/4103128.png?token=exp=1637631859~hmac=ffa7ac5371a0c7fd621b7b3e41c6f7ff">
             {{/if}}
 
             <p id="votes-amount"> 
@@ -22,10 +22,10 @@
 
             {{#if data.downvote}}
                 <img id="votes-downarrow" class="vote-arrow img-selected img-downvote"
-                src="https://cdn3.iconfinder.com/data/icons/faticons/32/arrow-down-01-512.png">
+                src="https://cdn-icons.flaticon.com/png/512/4103/premium/4103128.png?token=exp=1637631859~hmac=ffa7ac5371a0c7fd621b7b3e41c6f7ff">
                 {{else}}
                 <img id="votes-downarrow" class="vote-arrow"
-                src="https://cdn3.iconfinder.com/data/icons/faticons/32/arrow-down-01-512.png">
+                src="https://cdn-icons.flaticon.com/png/512/4103/premium/4103128.png?token=exp=1637631859~hmac=ffa7ac5371a0c7fd621b7b3e41c6f7ff">
             {{/if}}
         </div>
     </div>
