create a new post concept

--- a/views/partials/post.hbs
+++ b/views/partials/post.hbs
@@ -1,7 +1,7 @@
 <div class="post-holder" id="{{data._id}}">
     <div class="top-holder">
         <div class="content-holder">
-            <p>
+            <p style="white-space: pre-line">
                 {{data.sentence}}
             </p>
         </div>
