--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,7 +12,7 @@ a {
 
 form {
   margin: 30px auto;
-  width: 380px;
+  width: 30%;
 }
 
 form label {
@@ -24,6 +24,7 @@ form label {
 }
 
 form input,
+form textarea,
 form button {
   box-sizing: border-box;
   font-size: 14px;
@@ -32,6 +33,12 @@ form button {
   width: 100%;
   margin-bottom: 20px;
 }
+form textarea {
+  height: 200px;
+  resize: none;
+  white-space: pre-wrap;
+}
+
 
 form button {
   background: #43a3e6;
@@ -125,9 +132,7 @@ ul li {
 
 /* Votes */
 .vote-holder {
-  height: 100px;
   font-size: 2.5rem;
-  align-self: flex-end;
   display: flex;
   flex-direction: column;
   align-items: center;
