--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -106,6 +106,30 @@ ul li {
   font-size: 2em;
 }
 
+.background {
+  position: fixed;
+  z-index: -100;
+  top: 0;
+  margin: 0 auto;
+  height: 100%;
+  width: 100%;
+  opacity: 0.8;
+}
+
+.right {
+  position: fixed;
+  z-index: -100;
+  top: 20%;
+  right: 20%;
+  transform: scale(2);
+}
+.left {
+  position: fixed;
+  z-index: -100;
+  top: 20%;
+  left: 0;
+  transform: scale(2);
+}
 
 /* PARTIALS */
 .post-holder {
