Fixed profile page data plotting

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -40,6 +40,7 @@
             </a> 
             <a id="sing-link" href="/signup">Signup</a> 
             <a id="sing-link" href="/login"> Login </a> 
+            <a id="sing-link" href="/Profile"> Profile </a> 
          </div>
       </nav>
 
@@ -52,6 +53,6 @@
          {{{body}}}
       </div>
 
-      <script src="/js/script.js" height="300"></script>
+      <script src="/js/script.js"></script>
    </body>
 </html>
