--- a/views/pages/comment.hbs
+++ b/views/pages/comment.hbs
@@ -1,14 +1,16 @@
-{{#each post}}
-  {{> post data=this}}
-{{/each}}
+<div id="main-container">
+  {{#each post}}
+    {{> post data=this}}
+  {{/each}}
 
-<form method="POST" action="/profile">
-  <label>Comment</label>
-  <input type="comment" name="comment" placeholder="Post your comment!"  >
-  
-  <button type='submit'>Post</button>
-</form>
+  <form method="POST" action="/comment/create">
+    <label>Comment</label>
+    <input type="comment" name="comment" placeholder="Post your comment!"  >
+    
+    <button type='submit'>Post</button>
+  </form>
 
-{{#each comments}} 
-  {{> comment}}
-{{/each}}
+  {{#each comments}} 
+    {{> comment}}
+  {{/each}}
+</div>
