--- a/views/pages/comment.hbs
+++ b/views/pages/comment.hbs
@@ -1,11 +1,9 @@
 <div id="main-container">
-  {{#each post}}
-    {{> post data=this}}
-  {{/each}}
+    {{> post data=post}}
 
-  <form method="POST" action="/comment/create">
+  <form method="POST" action="/comment/{{post._id}}/create">
     <label>Comment</label>
-    <input type="comment" name="comment" placeholder="Post your comment!"  >
+    <textarea type="text" name="sentence" placeholder="Post your comment!"></textarea>
     
     <button type='submit'>Post</button>
   </form>
