strange responsive design Navbar

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -12,23 +12,22 @@
    <body>
       
       <nav id='nav-holder'>
-         <a href="/home" class="nav-container">
+         <a href="/home" id="logo-holder" class="nav-container">
             <img id="logo" src="../images/logo-color.png">
          </a>
 
          <div class="nav-container">
-
             <a class="middle-item" href="/home/hot"> 
                <img src="https://cdn-icons-png.flaticon.com/512/633/633652.png" alt="">
                <p>Hot</p>
             </a>
 
-            <a class="middle-item"href="/home/trendy"> 
+            <a class="middle-item" href="/home/trendy"> 
                <img src="https://cdn-icons-png.flaticon.com/512/3121/3121784.png" alt="">
                <p>Trendy</p>
             </a>
 
-            <a class="middle-item"href="/home/new"> 
+            <a class="middle-item" href="/home/new"> 
                <img src="https://cdn-icons-png.flaticon.com/512/3282/3282468.png" alt="">
                <p>New</p>
             </a>
@@ -38,8 +37,8 @@
             <a href="/profile/new-post">
                <button id="newpost-but">New Post</button>
             </a> 
-            <a id="sing-link" href="/signup">Signup</a> 
-            <a id="sing-link" href="/login"> Login </a> 
+            <a id="sing-link" class="login-disable" href="/signup">Signup</a> 
+            <a id="sing-link" class="login-disable" href="/login"> Login </a> 
             <a id="sing-link" href="/Profile"> Profile </a> 
          </div>
       </nav>
