--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -135,10 +135,11 @@ ul li {
 .post-holder {
   background-color: white;
   margin: 20px 10px;
-  border-radius: 5px;
+  border-radius: 3px;
   width: 100%;
   padding: 0px;
-  box-shadow: 0px 0px 10px;
+  border: 4px solid rgb(197, 195, 195);
+  filter: drop-shadow(0 0 3px rgb(216, 215, 215))
 }
 
 .post-holder p {
@@ -177,7 +178,7 @@ ul li {
 }
 
 #votes-downarrow {
-  transform: rotate(180deg);
+  
 }
 
 .vote-arrow {
@@ -204,11 +205,11 @@ ul li {
 }
 
 .img-upvote {
-  filter: hue-rotate(0deg);
+  filter: hue-rotate(280deg);
 }
 
 .img-downvote {
-  filter: hue-rotate(230deg);
+  filter: hue-rotate(150deg);
 }
 
 /* BOTTOM */
