email verification added

--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -2,6 +2,9 @@
   <label>Username</label>
   <input type="username" name="username" placeholder="Enter your Username"  >
 
+   <label>Email</label>
+  <input type="username" name="username" placeholder="Enter your Email"  >
+
   <label>Password</label>
   <input type="password" name="password" placeholder="Enter your Password"  >
  
