--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,9 +1,9 @@
 <form action="/signup" method="POST">
   <label>Name</label>
-  <input name="username" type="text"  placeholder="Enter your username"  >
+  <input name="username" type="text"  placeholder="Create your username"  >
 
-  {{!-- <label>Email</label>
-  <input name="email" type="email"  placeholder="Enter your email"  > --}}
+  <label>Email</label>
+  <input name="email" type="email"  placeholder="Enter your email"  >  
 
   <label>Password</label>
   <input name="password" type="password"  placeholder="Enter your Password"  >
