--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -134,10 +134,9 @@ ul li {
 /* PARTIALS */
 .post-holder {
   background-color: white;
-  margin: 20px 10px;
   border-radius: 3px;
+  margin-bottom: 5px;
   width: 100%;
-  padding: 0px;
   border: 4px solid rgb(197, 195, 195);
   filter: drop-shadow(0 0 3px rgb(216, 215, 215))
 }
@@ -148,7 +147,7 @@ ul li {
 
 /* Top Holder */
 .top-holder {
-  margin: 5px 10px;
+  margin: 5px 0px;
   display: flex;
 }
 .content-holder {
@@ -304,7 +303,7 @@ ul li {
 
 .middle-item:hover {
   color: #f02b63;
-  border: 3px double #f02b63;
+  border: 2px solid #f02b63;
 }
 
 
@@ -367,7 +366,43 @@ ul li {
   color: #e61cdb;
 }
 
+.post-container {
+  padding: 10px;
+  padding-right: 20px;
+  width: 100%;
+  max-height: 600px;
+  background-color: #f6f6f6;
+  overflow-y: auto;
+  margin-bottom: 20px;
+  border: 5px solid rgb(207, 207, 207);
+  border-radius: 10px;
+}
 
+.profile-header {
+  color: #ffffff;
+  font-size: large;
+  font-weight: 700;
+  line-height: 3px;
+  padding: 1px 10px;
+  border: 5px solid rgb(223, 223, 223);
+  margin-left: 10px;
+  border-radius: 10px 10px 0 0;
+  width: 100px;
+  text-align: center;
+}
+
+.col-purple {
+  background-color: rgb(113, 55, 223);
+  border: 5px solid rgb(141, 88, 238);
+}
+.col-purp-orang {
+  background-color: rgb(162, 55, 223);
+  border: 5px solid rgb(181, 88, 235);
+}
+.col-orange {
+  background-color: rgb(230, 159, 46);
+  border: 5px solid rgb(235, 178, 86);
+}
 /* --- RESPONSIVE DESIGN ---- */
 
 #logo{
@@ -388,12 +423,31 @@ ul li {
   max-width: 35%;
 }
 
+.background-content {
+  position: fixed;
+  z-index: -100;
+  top: 0;
+  margin: 0 auto;
+  height: 100%;
+  opacity: 0.5;
+  margin-left: 15vw;
+  width: 45%;
+  background-color: #c2c0c0;
+  border-left: 10px solid #856cb3;
+  border-right: 10px solid #b38c6c;
+  filter: drop-shadow(0 0 10px rgb(65, 65, 65));
+}
+
 @media only screen and (max-width: 800px) {
   #main-container {
     margin-top: 100px;
     margin-left: 0vw;
     max-width: 100%;
-    transition: 0.1s;
+  }
+
+  .background-content {
+    margin-left: 0vw; 
+    width: 100%;
   }
 
   #logo-holder, .login-disable{
@@ -420,7 +474,11 @@ ul li {
     margin-top: 100px;
     margin-left: 10vw;
     max-width: 70%;
-    transition: 0.1s;
+  }
+
+  .background-content {
+    margin-left: 5vw; 
+    width: 80%;
   }
 
   #logo{
