--- a/views/partials/post.hbs
+++ b/views/partials/post.hbs
@@ -46,4 +46,16 @@
             </p>
         </div>
     </div>
+
+    {{#if this.isUserOwner}}
+        <div style="display: flex; margin-left: 5px;">
+            <form method="post" style="margin: 0; width: 15%;" action="profile/post/{{data._id}}/delete">
+                <button class="delete-button">Delete</button>
+            </form>
+        
+            <form method="post" style="margin: 0; width: 15%;" action="profile/post/{{data._id}}/update">
+                <button class="update-button">Update</button>
+            </form> 
+        </div>
+    {{/if}}
 </div>
