Profile no content handle & Robot font import

--- a/views/profile/profile.hbs
+++ b/views/profile/profile.hbs
@@ -10,7 +10,13 @@
         {{/each}}
 
         {{else}}
-        <p><i>Oh there is no data</i></p>
+        <p> 
+            Oh boi its empty here. Click this →
+            <a href="/profile/new-post">
+                <button class="small-button col-purple">New Post</button>
+             </a> 
+             → to create a new post
+        </p>
     {{/if}}
 </div>
 
@@ -24,7 +30,13 @@
         {{/each}}
 
         {{else}}
-        <p><i>Oh there is no data</i></p>
+        <p>
+            Oh boi its empty here. Click this →
+            <a href="/home/hot">
+                <button class="small-button col-purp-orang">Home page</button>
+            </a> 
+            → to see some posts            
+        </p>
     {{/if}}
 </div>
 
@@ -38,6 +50,12 @@
         {{/each}}
 
         {{else}}
-        <p><i>Oh boi there is no data</i></p>
+        <p>
+            Oh boi its empty here. Click this →
+            <a href="/home/hot">
+                <button class="small-button col-orange">Home Page</button>
+            </a> 
+            → to see some posts            
+        </p>
     {{/if}}
 </div>   
