--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Roboto:wght@100;400&family=VT323&display=swap');
+
 body {
   padding: 0px;
   margin: 0;
-  font: 14px 'Lucida Grande', Helvetica, Arial, sans-serif;
+  font: 16px 'Lucida Grande', Helvetica, Arial, sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 a {
@@ -137,16 +140,18 @@ ul li {
   margin-bottom: 5px;
   width: 100%;
   border: 4px solid rgb(197, 195, 195);
-  filter: drop-shadow(0 0 3px rgb(216, 215, 215))
+  filter: drop-shadow(0 0 3px rgb(216, 215, 215));
+  padding: 10px;
 }
 
 .post-holder p {
   color: #646464;
+  line-height: 10px;
 }
 
 /* Top Holder */
 .top-holder {
-  margin: 5px 0px;
+  margin: 0px 0px;
   display: flex;
 }
 .content-holder {
@@ -171,7 +176,7 @@ ul li {
 #votes-amount {
   font-size: 2.5rem;
   padding: 0;
-  margin: 0;
+  margin: 10px;
   text-align: center;
 }
 
@@ -366,15 +371,17 @@ ul li {
 }
 
 .post-container {
-  padding: 10px;
-  padding-right: 20px;
   width: 100%;
-  max-height: 600px;
-  background-color: #f6f6f6;
-  overflow-y: auto;
-  margin-bottom: 20px;
-  border: 5px solid rgb(207, 207, 207);
-  border-radius: 10px;
+  max-height: 800px;
+  background-color: #ffffffa1;
+  overflow: auto;
+  padding: 10px;
+  margin-bottom: 30px;
+  filter: drop-shadow(0 0 10px rgb(114, 114, 114));
+}
+
+.post-container .post-holder {
+  width: 95%;
 }
 
 .profile-header {
@@ -390,6 +397,20 @@ ul li {
   text-align: center;
 }
 
+.small-button {
+  color: white;
+  font-size: large;
+  border-width: 0;
+  border-radius: 10px;
+  padding: 10px 20px;
+
+  transition: 0.3s;
+}
+.small-button:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+  filter: drop-shadow(0 0 10px white);
+}
 .col-purple {
   background-color: rgb(113, 55, 223);
   border: 5px solid rgb(141, 88, 238);
@@ -459,6 +480,7 @@ ul li {
 #main-container {
   margin-left: 20vw;
   margin-top: 100px;
+  margin-bottom: 100px;
   max-width: 35%;
 }
 
