--- a/views/auth/landingpage.hbs
+++ b/views/auth/landingpage.hbs
@@ -9,4 +9,10 @@
 
 <p>Anonymous and reliable. Mark Zuckerberg is gonna hate it.</p>
 
-<button type='submit'>Check it out boi</button>
+<button id='redirect'>Check it out boi</button>
+<script>document.querySelector('#redirect')
+    .addEventListener('click', () => {
+        window.location.href= '/home'
+    })
+</script>
+
