Username above posts

--- a/views/partials/post.hbs
+++ b/views/partials/post.hbs
@@ -1,6 +1,7 @@
 <div class="post-holder" id="{{data._id}}">
     <div class="top-holder">
         <div class="content-holder">
+            <p>@{{data.user.username}}</p>
             <p style="white-space: pre-line">
                 {{data.sentence}}
             </p>
