Post model stores username now

--- a/views/partials/post.hbs
+++ b/views/partials/post.hbs
@@ -1,7 +1,11 @@
 <div class="post-holder" id="{{data._id}}">
     <div class="top-holder">
         <div class="content-holder">
-            <p>@{{data.user.username}}</p>
+            {{#if data.username}}
+                <p>@{{data.username}}</p>
+            {{else}}
+                <p>@unknown</p>
+            {{/if}}
             <p style="white-space: pre-line">
                 {{data.sentence}}
             </p>
